<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lilli</string>
    <string name="send">Send</string>
    <string name="download_style">Choose a download method from the spinner below</string>
    <string name="trash">Trash</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_files">Delete local bin files?</string>
    <string name="refresh">Refresh</string>
    <string name="delete_title">Delete the local database?</string>
    <string name="text_hint">Enter a resource…</string>
    <string name="button1">100KB File</string>
    <string name="button2">1MB File</string>
    <string name="button3">10MB File</string>
    <string name="or">— or —</string>
    <string-array name="dropdown_options">
        <item>Origin</item>
        <item>CDN</item>
        <item>Lilli</item>
        <item>BitTorrent</item>
    </string-array>
    <string-array name="lilli_spinner_options">
        <item>GPS</item>
        <item>IP</item>
    </string-array>
</resources>