<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" >

    <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_style" android:layout_alignLeft="@+id/url_string"/>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"/>

    <Spinner android:id="@+id/lilli_spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/spinner"
             android:visibility="gone"/>

    <Button android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lilli_spinner"
            android:text="@string/button1"
            android:onClick="getBuiltinResource"/>

    <Button android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button1"
            android:text="@string/button2"
            android:onClick="getBuiltinResource"/>

    <Button android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button2"
            android:text="@string/button3"
            android:onClick="getBuiltinResource"/>

    <TextView android:id="@+id/or"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/or"
              android:layout_below="@id/button3"
              android:gravity="center"
              android:layout_marginTop="16dp"
              android:layout_marginBottom="16dp"
              android:textStyle="bold"/>

    <EditText
            android:id="@+id/url_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/button"
            android:hint="@string/text_hint"
            android:layout_below="@id/or"/>

    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:onClick="requestURL"
            android:layout_alignParentRight="true"
            android:layout_below="@id/or"/>

    <TextView
            android:id="@+id/response_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/url_string"/>
</RelativeLayout>

